refact: Add thymeleaf files for emailing and fix audit log issues